--- a/wp-content/plugins/crown-blocks/src/block-column/editor.scss
+++ b/wp-content/plugins/crown-blocks/src/block-column/editor.scss
@@ -18,5 +18,41 @@
 				}
 			}
 		}
+		&.vertical-alignment-stretch > .inner {
+			> .column-contents {
+				display: flex;
+				> .inner {
+					flex-direction: row;
+					> .block-editor-inner-blocks {
+						width: 100%;
+						display: flex;
+						> .block-editor-block-list__layout {
+							width: 100%;
+							display: flex;
+							flex-direction: column;
+							> .wp-block[data-type="crown-blocks/container"]:first-child {
+								flex: 1 1 auto;
+								display: flex;
+								width: 100%;
+								> .crown-block-editor-container {
+									width: 100%;
+									display: flex;
+									flex-direction: column;
+									> .wp-block-crown-blocks-container {
+										flex: 1 1 auto;
+										display: flex;
+										align-items: center;
+										> .inner {
+											width: 100%;
+										}
+									}
+								}
+							}
+						}
+					}
+					
+				}
+			}
+		}
 	}
 }
