--- a/wp-content/plugins/crown-blocks/src/block-stat/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-stat/style.scss
@@ -3,11 +3,11 @@ $spacer: 1rem;
 
 .wp-block-crown-blocks-stat {
 	margin-bottom: 1rem;
-	text-align: center;
-	.stat-label {
-		text-transform: uppercase;
-	}
+	text-align: left;
 	.stat-value {
 		font-size: 1.875rem;
+	}
+	.stat-label {
+		text-transform: uppercase;
 	}
 }
