--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_main.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_main.scss
@@ -3,18 +3,22 @@
 #main {
 	.container {
 		padding-top: 40px;
-		padding-bottom: 40px;
+		// padding-bottom: 40px;
+		padding-bottom: calc(40px + (4.75rem / 2));
 		@include media-breakpoint-up(md) {
 			padding-top: 60px;
-			padding-bottom: 60px;
+			// padding-bottom: 60px;
+			padding-bottom: calc(60px + (7.5rem / 2));
 		}
 		@include media-breakpoint-up(lg) {
 			padding-top: 80px;
-			padding-bottom: 80px;
+			// padding-bottom: 80px;
+			padding-bottom: calc(80px + (7.5rem / 2));
 		}
 		@include media-breakpoint-up(xl) {
 			padding-top: 100px;
-			padding-bottom: 100px;
+			// padding-bottom: 100px;
+			padding-bottom: calc(100px + (7.5rem / 2));
 		}
 		> .inner {
 			margin-left: auto;
@@ -69,9 +73,17 @@
 				margin-bottom: -100px;
 			}
 			& {
+				margin-bottom: calc(-40px - (4.75rem / 2));
 				padding-bottom: (4.75rem / 2);
 				@include media-breakpoint-up(md) {
+					margin-bottom: calc(-60px - (7.5rem / 2));
 					padding-bottom: (7.5rem / 2);
+				}
+				@include media-breakpoint-up(lg) {
+					margin-bottom: calc(-80px - (7.5rem / 2));
+				}
+				@include media-breakpoint-up(xl) {
+					margin-bottom: calc(-100px - (7.5rem / 2));
 				}
 			}
 		}
