--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -267,4 +267,10 @@ $modal-title-line-height:           $headings-line-height !default;
 
 // Alerts
 
+$alert-padding-y:                   1.25rem !default;
+$alert-padding-x:                   1.25rem !default;
+
+
+// Alerts
+
 $alert-border-radius:               0 !default;
