--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_alerts.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_alerts.scss
@@ -3,10 +3,22 @@
 	border-width: 0;
 	border-left-width: 4px;
 	font-size: 1rem;
+	> *:last-child {
+		margin-bottom: 0;
+	}
+	a {
+		color: inherit;
+		font-weight: 700;
+		text-decoration: underline;
+		transition: opacity .15s;
+		&:hover {
+			opacity: .8;
+		}
+	}
 }
 
 @each $color, $value in $theme-colors {
 	.alert-#{$color} {
-		@include alert-variant(mix($value, #fff, 10%), $value, $value);
+		@include alert-variant(mix($value, #fff, 10%), $value, color-yiq(mix($value, #fff, 10%)));
 	}
 }
