--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -17126,6 +17126,34 @@ nav.pagination {
 
 /*	Gallery
 ---------------------------------------------------------*/
+.wp-block-gallery.is-style-logos .blocks-gallery-grid {
+  width: 100%; }
+
+.wp-block-gallery.is-style-logos .blocks-gallery-item {
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0; }
+  .wp-block-gallery.is-style-logos .blocks-gallery-item figure {
+    width: 100%; }
+    .wp-block-gallery.is-style-logos .blocks-gallery-item figure:before {
+      content: '';
+      display: block;
+      height: 0;
+      padding-top: 60%; }
+    .wp-block-gallery.is-style-logos .blocks-gallery-item figure img {
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      -o-object-fit: contain;
+         object-fit: contain;
+      -o-object-position: center;
+         object-position: center; }
+    .wp-block-gallery.is-style-logos .blocks-gallery-item figure figcaption {
+      display: none; }
+
 .wp-block-gallery.is-style-mosaic-8 {
   padding: 1px; }
   .wp-block-gallery.is-style-mosaic-8 .blocks-gallery-grid {
