--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -184,6 +184,36 @@
 ---------------------------------------------------------*/
 
 .wp-block-gallery {
+	&.is-style-logos {
+		.blocks-gallery-grid {
+			width: 100%;
+		}
+		.blocks-gallery-item {
+			flex-grow: 0;
+			figure {
+				width: 100%;
+				&:before {
+					content: '';
+					display: block;
+					height: 0;
+					padding-top: 60%;
+				}
+				img {
+					display: block;
+					position: absolute;
+					left: 0;
+					top: 0;
+					width: 100%;
+					height: 100%;
+					object-fit: contain;
+					object-position: center;
+				}
+				figcaption {
+					display: none;
+				}
+			}
+		}
+	}
 	&.is-style-mosaic-8 {
 		padding: 1px;
 		.blocks-gallery-grid {
