--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -17935,6 +17935,47 @@ nav.pagination {
 .wp-block-crown-blocks-center-finder article.location {
   background-color: #F4F8FD; }
 
+/*	Portal Link
+---------------------------------------------------------*/
+.wp-block-crown-blocks-portal-link.text-color-light {
+  color: #fff; }
+
+.wp-block-crown-blocks-portal-link.text-color-dark {
+  color: #233053; }
+
+.wp-block-crown-blocks-portal-link > .link:hover > .inner:after {
+  margin-right: 0;
+  opacity: 1; }
+
+@media (min-width: 1200px) {
+  .wp-block-crown-blocks-portal-link > .link > .inner {
+    padding-right: 4rem; }
+    .wp-block-crown-blocks-portal-link > .link > .inner:after {
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      font-weight: normal;
+      line-height: 1;
+      font-family: icomoon;
+      content: "";
+      position: absolute;
+      margin-right: .5em;
+      bottom: 2.5rem;
+      right: 1.5rem;
+      opacity: 0;
+      -webkit-transition: margin-right .2s ease-out, opacity .2s;
+      transition: margin-right .2s ease-out, opacity .2s;
+      line-height: 1;
+      font-size: 1.5rem; } }
+
+.wp-block-crown-blocks-portal-link .link-title {
+  font-size: 1.5rem; }
+  @media (min-width: 1200px) {
+    .wp-block-crown-blocks-portal-link .link-title {
+      font-size: 2.5rem; } }
+
 .gform_wrapper {
   margin-bottom: 1rem;
   text-align: left; }
