--- a/wp-content/plugins/crown-blocks/src/block-portal-link/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-portal-link/style.scss
@@ -11,6 +11,39 @@
 		color: #222;
 		> .link > .link-bg:after { background-color: rgba(#000, .1); }
 	}
+	&.is-style-outline {
+		&.text-color-light {
+			> .link:hover { color: #fff; }
+		}
+		&.text-color-dark {
+			> .link:hover { color: #000; }
+		}
+		> .link {
+			transition: color .2s;
+			&:hover {
+				color: #222;
+				> .link-bg {
+					opacity: 1;
+				}
+				> .link-outline {
+					opacity: 0;
+				}
+			}
+			&:before {
+				padding-top: 60%;
+			}
+			> .link-bg {
+				opacity: 0;
+				transition: opacity .2s;
+				&:after {
+					display: none;
+				}
+			}
+			> .link-outline {
+				display: block;
+			}
+		}
+	}
 	> .link {
 		width: 100%;
 		display: flex;
@@ -64,6 +97,17 @@
 				opacity: .5;
 				filter: grayscale(1);
 			}
+		}
+		> .link-outline {
+			position: absolute;
+			left: 0;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			overflow: hidden;
+			display: none;
+			border: 5px solid #333;
+			transition: opacity .2s;
 		}
 		> .inner {
 			width: 100%;
