--- a/wp-content/plugins/crown-blocks/src/block-column/editor.scss
+++ b/wp-content/plugins/crown-blocks/src/block-column/editor.scss
@@ -30,10 +30,12 @@
 							width: 100%;
 							display: flex;
 							flex-direction: column;
+							> .wp-block {
+								width: 100%;
+							}
 							> .wp-block[data-type="crown-blocks/container"]:first-child {
 								flex: 1 1 auto;
 								display: flex;
-								width: 100%;
 								> .crown-block-editor-container {
 									width: 100%;
 									display: flex;
@@ -51,7 +53,6 @@
 							> .wp-block[data-type="crown-blocks/portal-link"] {
 								flex: 1 1 auto;
 								display: flex;
-								width: 100%;
 								> .crown-block-editor-container {
 									width: 100%;
 									display: flex;
